--- a/css/styles.css
+++ b/css/styles.css
@@ -1,60 +1,132 @@
-/* soft reset */
 * {
-    padding:0;
-    margin:0;
+   
     box-sizing: border-box;
-    /* box-sizing includes the padding and border in an element total width and height */
 }
 
-.box {
-    background-color: salmon;
-    width: 100px;
-    height: 100px;
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin:auto;
+   
+}
+.wrapper{
+ max-width: 50%;
+ max-height: 100%;
+ margin: auto;
+ background-color: lightgrey;
+}   
+
+h1, h2, h4 {
+    color:#056526;
+    margin: 0.5rem;
+}
+p{
+    color:#056526;
+    margin:0.5rem;
+}
+hr{
+    margin:0 1rem
 }
 
-.paddingDemo {
-    /* top right bottom left */
-    padding: 5px; /* if all sides have same values we can just declare it once */
-    padding: 2px 5px 10px 20px;
-    padding: 0 5px; /* top and bottom 0px & left and right 5px */
+.logo {
+    width: 50px;
+    display: inline-block;
+    margin:1rem 0 0 1rem;
 }
 
-.borderRadiusDemo {
-    border: 3px dotted green;
-    border-radius: 20px;
+.logo img {
+    width: inherit; /* inherits size from parent element */
 }
 
-.marginDemo {
-    margin: 5px;
+nav {
+    display: inline-block;
+    vertical-align: top;
+    margin:1rem 0;
+}
+nav ul{
+    padding:0;
 }
 
-.centerDemo {
-    background-color: springgreen;
-    margin: 0 auto;
-    width: 90%;
+nav li { 
+     display: inline-block; 
 }
 
-.topBox {
-    width: 100px;
-    height: 100px;
-    background-color: steelblue;
-    margin-bottom: 10px
+nav li a {
+    background-color:#056526;
+    text-decoration: none;
+    color: white;
+    padding: 0.2rem;
+    border-radius: 10px;
 }
 
-.bottomBox {
-    width: 100px;
-    height: 100px;
-    background-color: violet;
-    margin-top: 30px;
+/* lvha */
+nav li a:visited {
+    background-color: lightcyan;
+    color: black;
 }
 
-.max-widthDemo {
-    width: 100%; 
-    max-width: 800px; /* For max-width to work correctly, your element needs to have a specified width */
+nav li a:hover {
+    background-color: orange;
+    color: black;
 }
 
-.min-widthDemo {
-    width: 70%;
-    min-width: 340px; /* it doesnt get any smaller than 340px */
-    background-color: yellow;
+nav li a:active {
+    background-color: red;
+}
+
+.articleBox{
+    display: inline-block;
+    vertical-align:center;
+   max-width: 30%;
+  
+}
+.articleBox{
+     display: inline-block;
+     max-width: 30%;
+     max-height: 50%;
+     border:1px solid transparent;
+     background-color: rgb(191, 189, 189);
+    
+     padding:0.5rem;
+     margin-left:0.5rem;
+     vertical-align:center;
+     
+     
+     
+}
+
+.articleBox img{
+    border:1px solid transparent;
+    max-width:16rem;
+    max-height:16rem;
+    border-radius:50%;
+       
+    
+}
+.articleBox p{
+    background-color:aliceblue;
+    margin:0.2rem;
+    padding:10px;
+}
+
+aside{
+    display:inline-block;
+    max-width: 35rem;
+    margin-left:10px;
+    border-left: 1px solid gray;
+    border-bottom: 1px solid gray;
+    background-color: rgb(191, 189, 189);
+    margin-bottom: 0.5rem;
+}
+footer{
+     max-width:100%;
+    max-height: 100%; 
+    border:2px solid red;
+    margin:4rem 1rem; 
+}
+footer p{
+     border:2px solid red;
+     text-align:center;
+    max-width:95%;
+    margin: 0.5rem auto;
+
 }
